drag and drop in progress

--- a/board.html
+++ b/board.html
@@ -82,9 +82,7 @@
 
                 <div  class="board-task-container">
 
-
-
-                    <div id="todo" class="board-to-do width-25" ondrop="moveTo('todo')" ondragover="allowDrop(event)">
+                    <div id="todo" class="board-to-do width-25" ondrop="moveTo('in-progress')" ondragover="allowDrop(event)">
                         
                         <div class="flex">
                             <h4 class="board-task-title">To do</h4>
