add contact json

--- a/contacts.html
+++ b/contacts.html
@@ -24,6 +24,7 @@
     <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
     <script src="js/logout.js" defer></script>
+    <script src="js/contacts.js" defer></script>
     
 </head>
 
