add contact functionalities

--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
     
 </head>
 
-<body onload="renderContactBook(), init()">
+<body onload="init(), renderContactBook()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
