--- a/contacts.html
+++ b/contacts.html
@@ -21,14 +21,14 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/custom-select.css">
 
     <script src="js/mini_backend.js"></script>
-    <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
+    <script src="js/load.js" defer></script>
     <script src="js/logout.js" defer></script>
     <script src="js/contacts.js" defer></script>
     
 </head>
 
-<body onload="init(), renderContactBook()">
+<body onload="init()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
