--- a/addTask.html
+++ b/addTask.html
@@ -26,7 +26,7 @@
 </head>
 
 
-<body onload="init()">
+<body id="addTask-body" onload="init()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
