--- a/board.html
+++ b/board.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body onload="init()">
+<body id="board-body" onload="init()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
