add small edit task functionalities

--- a/board.html
+++ b/board.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/edit_task.css">
 
 
+    <script src="js/task.js" defer></script>
     <script src="js/render.js" defer></script>
     <script src="js/drag_and_drop.js" defer></script>
     <script src="js/mini_backend.js"></script>
