--- a/summary.html
+++ b/summary.html
@@ -71,7 +71,7 @@
                             <div class="task-urgent-left-part">
                                 <div class="task-urgent-left-part-1">
                                     <img src="kanban_img/summary-icons/Urgent.png">
-                                    <span class="summary-count-white">1</span>
+                                    <span id="task-amount-urgent" class="summary-count-white">00</span>
                                 </div>
 
                                 <div class="task-urgent-left-part-2">
