--- a/addTask.html
+++ b/addTask.html
@@ -34,7 +34,7 @@
             <div class="info">
                 <p class="name">Kanban Project Management Tool</p>
                 <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
-                <img onclick="toggleLogoutBox()" class="user-img" src="kanban_img/user_icons/user_example.png">
+                <div class="user-logout-icon-container"></div>
             </div>
         </div>
 
