--- a/contacts.html
+++ b/contacts.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/custom-select.css">
 
     <script src="js/mini_backend.js"></script>
-    <script src="js/render.js" defer></script>
     <script src="js/load.js" defer></script>
+    <script src="js/render.js" defer></script>
     <script src="js/logout.js" defer></script>
     <script src="js/contacts.js" defer></script>
     
@@ -36,7 +36,7 @@
             <div class="info">
                 <p class="name" onclick="renderSmallContacts()">Kanban Project Management Tool</p>
                 <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
-                <img onclick="toggleLogoutBox()" class="user-img" src="kanban_img/user_icons/user_example.png">
+                <div class="user-logout-icon-container"></div>
             </div>
         </div>
 
