--- a/summary.html
+++ b/summary.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/index.css">
 
     <script src="js/mini_backend.js"></script>
+    <script src="js/summary.js" defer></script>
     <script src="js/load.js" defer></script>
     <script src="js/drag_and_drop.js" defer></script>
-    <script src="js/summary.js" defer></script>
     <script src="js/render.js" defer></script>
     <script src="js/logout.js" defer></script>
     
@@ -29,7 +29,7 @@
             <div class="info">
                 <p class="name" onclick="renderSmallContacts()">Kanban Project Management Tool</p>
                 <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
-                <img onclick="toggleLogoutBox()" class="user-img" src="kanban_img/user_icons/user_example.png">
+                <div class="user-logout-icon-container"></div>
             </div>
         </div>
 
