completing editing task in board

--- a/board.html
+++ b/board.html
@@ -19,11 +19,10 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/edit_task.css">
 
 
-    <script src="js/task.js" defer></script>
     <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
-    
     <script src="js/drag_and_drop.js" defer></script>
+    <script src="js/task.js" defer></script>
     <script src="js/mini_backend.js"></script>
     <script src="js/custom-select.js" defer></script>
     <script src="js/logout.js" defer></script>
@@ -37,7 +36,7 @@
 
             <div class="info">
                 <p class="name" onclick="renderSmallContacts()">Kanban Project Management Tool</p>
-                <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
+                <a class="help-btn-container" href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
                 <div class="user-logout-icon-container"></div>
             </div>
         </div>
