--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
 
             <div class="info">
                 <p class="name" onclick="renderSmallContacts()">Kanban Project Management Tool</p>
-                <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
+                <a class="help-btn-container" href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
                 <div class="user-logout-icon-container"></div>
             </div>
         </div>
