--- a/summary.html
+++ b/summary.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/generalKanban.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/index.css">
 
+    <script src="js/hover.js" defer></script>
     <script src="js/mini_backend.js"></script>
     <script src="js/summary.js" defer></script>
     <script src="js/load.js" defer></script>
@@ -28,7 +29,7 @@
 
             <div class="info">
                 <p class="name" onclick="renderSmallContacts()">Kanban Project Management Tool</p>
-                <a href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
+                <a class="help-btn-container" href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
                 <div class="user-logout-icon-container"></div>
             </div>
         </div>
