--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="kanban_css/legal-notice.css">
 
+    <script src="../js/template.js" defer></script>
     <script src="../js/load.js" defer></script>
     <script src="../js/render.js" defer></script>
     <script src="../js/mini_backend.js"></script>
@@ -54,14 +55,14 @@
         <div class="sidebar">
             <div class="inner-sidebar">
                 <div class="kanban-btns">
-                    <a href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
-                    <a href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
-                    <a href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
-                    <a href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
+                    <a id="kanban-link-0" href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
+                    <a id="kanban-link-1" href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
+                    <a id="kanban-link-2" href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
+                    <a id="kanban-link-3" href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
                 </div>
 
                 <div class="legal-notice">
-                    <a href="../kanban_assets/legal_notice.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/legal_notice.png"><span>Legal Notice</span></a>
+                    <a id="kanban-link-4" href="../kanban_assets/legal_notice.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/legal_notice.png"><span>Legal Notice</span></a>
                 </div>
             </div>
         </div>
@@ -85,10 +86,10 @@
 
             <div class="sidebar-mobile">
                 <div class="kanban-btns">
-                    <a href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
-                    <a href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
-                    <a href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
-                    <a href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
+                    <a id="kanban-link-5" href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
+                    <a id="kanban-link-6" href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
+                    <a id="kanban-link-7" href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
+                    <a id="kanban-link-8" href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
                 </div>
             </div>
 
