--- a/summary.html
+++ b/summary.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/generalKanban.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/index.css">
 
+    <script src="js/template.js" defer></script>
     <script src="js/hover.js" defer></script>
     <script src="js/mini_backend.js"></script>
     <script src="js/summary.js" defer></script>
@@ -50,14 +51,14 @@
         <div class="sidebar">
             <div class="inner-sidebar">
                 <div class="kanban-btns">
-                    <a href="summary.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
-                    <a href="board.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
-                    <a href="addTask.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
-                    <a href="contacts.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
+                    <a id="kanban-link-0" href="summary.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
+                    <a id="kanban-link-1" href="board.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
+                    <a id="kanban-link-2" href="addTask.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
+                    <a id="kanban-link-3" href="contacts.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
                 </div>
 
                 <div class="legal-notice">
-                    <a href="kanban_assets/legal_notice.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/legal_notice.png"><span>Legal Notice</span></a>
+                    <a id="kanban-link-4" href="kanban_assets/legal_notice.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/legal_notice.png"><span>Legal Notice</span></a>
                 </div>
             </div>
         </div>
@@ -183,10 +184,10 @@
 
             <div class="sidebar-mobile">
                 <div class="kanban-btns">
-                    <div class="kanban-link" onclick="renderSummary()"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></div>
-                    <div class="kanban-link" onclick="renderBoard()"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></div>
-                    <div class="kanban-link" onclick="renderAddTasks()"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></div>
-                    <div class="kanban-link" onclick="renderContacts()"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></div>
+                    <div id="kanban-link-5" class="kanban-link" onclick="renderSummary()"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></div>
+                    <div id="kanban-link-6" class="kanban-link" onclick="renderBoard()"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></div>
+                    <div id="kanban-link-7" class="kanban-link" onclick="renderAddTasks()"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></div>
+                    <div id="kanban-link-8" class="kanban-link" onclick="renderContacts()"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></div>
                 </div>
             </div>
         </div>
